definitions/services/ku-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ku-external-service
  labels:
    target: svc
spec:
  ports:
    - port: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ku-external-service
  labels:
    target: svc
subsets:
  - addresses:
      - ip: 10.244.84.149
    ports:
      - port: 80
