definitions/services/ku-load-balancer-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: ku-load-balancer-service-2
  labels:
    target: svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ku-lb-2
    target: svc
