definitions/services/ku-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ku-load-balancer-service
  labels:
    target: svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ku
    target: svc
