definitions/services/ku-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ku-node-port-service
  labels:
    target: svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123
  selector:
    app: ku
