definitions/services/ku-svc-named-port.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ku-pod
  labels:
    app: ku
    target: svc
spec:
  containers:
    - name: kubia
      image: luksa/kubia
      ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ku-svc
  labels:
    target: svc
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: ku
