definitions/services/ku-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ku-svc
  labels:
    target: svc
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ku
    target: svc
