definitions/services/ku-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx-example
  annotations:
    ingressclass.kubernetes.io/is-default-class: 'true'
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ku-ingress
  labels:
    target: svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - host: kubia.example.com
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: ku-node-port-service
                port:
                  number: 80
          - path: /bar
            pathType: Exact
            backend:
              service:
                name: ku-load-balancer-service
                port:
                  number: 80
